# pico_enc28j60_lwip_freertos

./: CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  main.cpp  mqtt_example.cpp  working.cpp
app/: FreeRTOSConfig.h  enc_os_lwip_glue.cpp  enc_os_lwip_glue.h  lwipopts.h
enc28j60/: CMakeLists.txt
enc28j60/inc/: enc28j60.h  enc28j60_registers.h
enc28j60/include/: enc28j60.h  enc28j60_registers.h
enc28j60/src/: enc28j60.cpp  enc28j60_FreeRtos_lwip.cpp  enc28j60_LWIP_FreeRTOS.cpp
hal/: CMakeLists.txt
hal/inc/: gpio.h  spi.h
hal/include/: gpio.h  gpio_wrapper.h  spi.h  utils.h
hal/src/: gpio.cpp  gpio_wrapper.cpp  spi.cpp  utils.cpp
inc/: lwipopts.h  tcpecho.h
